# sha2_hasher

./: Cargo.toml  README.md
src/: async.rs  lib.rs  sha2_hasher.rs  sync.rs
src/sync/: mod.rs
