[package]
name = "sha2_hasher"
version = "0.2.0"
edition = "2021"

[dependencies]
const-hex = { version = "1" }
sha2 = { version = "0.11.0-rc.3" }
tokio = { version = "1.49", features = ["fs"], optional = true }

[dev-dependencies]
tokio = { version = "1.49", features = ["fs", "macros", "rt"] }

[features]
default = []
async = ["dep:tokio"]
sync = []
sha224 = []
sha256 = []
sha384 = []
sha512 = []
